# coolreader

android/app/: CMakeLists.txt  build.gradle
android/app/thirdparty_libs/: CMakeLists.txt
android/app/thirdparty_libs/zlib/: Android.mk  CMakeLists.txt
android/src/org/coolreader/: CoolReader.java
android/src/org/coolreader/crengine/: BaseDialog.java  FileBrowser.java  ReaderView.java  SelectionToolbarDlg.java
crengine/src/: lvrend.cpp
